--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h2 {
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 20px 0;
 }
 
@@ -75,6 +76,10 @@ ul {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
+}
+
+.top-menu {
+    display: none;
 }
 
 main {
@@ -305,20 +310,43 @@ footer span {
         height: 500px;
     }
 
+    .logo-mark {
+        font-size: 14px; 
+    }
+
     nav ul {
         display: none;
+    }
+
+    .top-menu {
+        display: block;        
+    }
+
+    .top-menu img {
+        height: 12px;
     }
 
     main, section {
         flex-direction: column;
     }
 
+    main {
+        margin: 40px 0 30px 0;
+    }
+
     main article {
+        display: flex;
+        flex-direction: column;
         align-items: center;
+        text-align: center;
     }
 
     main h1 {
         font-size: 40px;
+    }
+
+    main img {
+        width: 80%;
     }
 
     h2 {
@@ -337,7 +365,7 @@ footer span {
     }
 
     .partners div {
-        padding: 5px 15px;
+        padding: 20px 15px;
     }
 
     .partners img {
