--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 h2 {
     color: #272D38;
     font-family: Inter;
-    font-size: 48px;
+    font-size: 52px;
     font-style: normal;
     font-weight: 700;
     line-height: 100%; /* 48px */
@@ -87,6 +87,7 @@ main {
     justify-content: space-between;
     align-items: center;
     gap: 30px;
+    margin: 80px 0;
 }
 
 main h1 {
@@ -157,13 +158,23 @@ button {
     background: #F6F6F6;
     padding: 5px 15px;
 }
-
 .info-sec {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 50px;
+    margin: 30px 0;
 }
 
+.info-sec article {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.arrow {
+    width: 50px;
+}
 
 .test-sec {
     display: flex;
