--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ button {
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    margin-bottom: 80px;
 }
 
 .partners p {
@@ -153,39 +154,42 @@ button {
 .partners div {
     display: flex;
     justify-content: space-between;
-    gap: 25px;
+    gap: 70px;
     border-radius: 8px;
     background: #F6F6F6;
     padding: 5px 15px;
 }
+
 .info-sec {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 50px;
-    margin: 30px 0;
+    gap: 170px;
+    margin: 50px 0;
 }
 
 .info-sec article {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 25px;
 }
 
 .arrow {
-    width: 50px;
+    width: 30px;
 }
 
 .test-sec {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
 }
 
 .test-sec article {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .peeps {
